--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
     align-items: center;
     min-height: 100vh;
     color:var(--text-color);
+    transition: background-color 0.4s ease, color 0.4s ease;
 }
 
 .container {
